Bug 17441 - Cannot compile due to drivers/pci/intel-iommu.c:437: sorry, unimplemented: inlining failed in call to 'width_to_agaw': function body not available
Summary: Cannot compile due to drivers/pci/intel-iommu.c:437: sorry, unimplemented: in...
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PCI (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_pci@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-30 14:11 UTC by Martin Mokrejs
Modified: 2010-09-17 22:52 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.35
Subsystem:
Regression: No
Bisected commit-id:


Attachments
.config (51.96 KB, text/plain)
2010-08-30 14:11 UTC, Martin Mokrejs
Details

Description Martin Mokrejs 2010-08-30 14:11:44 UTC
Created attachment 28431 [details]
.config

I tried to compile the kernel on a bit outdated RedHat rel 3. machine current kernel with gcc-3.4.5 and it fails with:


CC      drivers/pci/intel-iommu.o
In file included from include/linux/kobject.h:21,
                 from include/linux/fs.h:375,
                 from include/linux/debugfs.h:18,
                 from drivers/pci/intel-iommu.c:26:
include/linux/sysfs.h:183: warning: parameter has incomplete type
drivers/pci/intel-iommu.c: In function `__iommu_calculate_agaw':
drivers/pci/intel-iommu.c:437: sorry, unimplemented: inlining failed in call to 'width_to_agaw': function body not available
drivers/pci/intel-iommu.c:445: sorry, unimplemented: called from here
make[2]: *** [drivers/pci/intel-iommu.o] Error 1
Comment 1 Andrew Morton 2010-09-17 22:52:31 UTC
I queued a fix, thanks.

Note You need to log in before you can comment on or make changes to this bug.